# spam

./: Cargo.toml  README.md
idl/: spam.json
src/: consts.rs  instruction.rs  lib.rs  loaders.rs
src/processor/: initialize.rs  mine.rs  reset.rs  update_admin.rs  update_difficulty.rs
src/state/: bus.rs  treasury.rs
tests/: test_initialize.rs  test_mine.rs  test_register.rs  test_reset.rs  test_update_admin.rs  test_update_difficulty.rs
