[package]
name = "spam-program"
version = "1.2.0"
description = "The ultimate Solana testnet challenge! Make transactions, stress test the network, and earn SPAM tokens."
edition = "2021"
license = "Apache-2.0"
homepage = "https://spam.supply"
documentation = "https://spam.supply"
repository = "https://github.com/cookspam/spam"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[lib]
crate-type = ["cdylib", "lib"]
name = "spam"

[features]
no-entrypoint = []
default = []

[dependencies]
bs58 = "0.5.0"
bytemuck = "1.14.3"
num_enum = "0.7.2"
shank = "0.3.0"
solana-program = "^1.16"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.2", features = [ "no-entrypoint" ] } 
static_assertions = "1.1.0"
thiserror = "1.0.57"

[dev-dependencies]
bs64 = "0.1.2"
rand = "0.8.5"
solana-program-test = "^1.16"
solana-sdk = "^1.16"
tokio = { version = "1.35", features = ["full"] }
